--- a/peerlearning-backend-main/package.json
+++ b/peerlearning-backend-main/package.json
@@ -24,6 +24,7 @@
     "json2csv": "^5.0.6",
     "mongo-xlsx": "^1.0.12",
     "mongoose": "^5.11.16",
+    "node-cron": "^3.0.2",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.15",
     "querystring": "^0.2.1"
